--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <button id="openPDF"></button>
+      <div class="text">
+        Click the button to open the PDF
+      </div>
+      <div class="button-panel hidden">
+        <button id="pdf-button" class="open-pdf">
+            Open the PDF
+        </button>
+      </div>
     <script src="popup.js"></script>
   </body>
 </html>
